Added SpringSecurity. Created migrations.