@@ -1,3 +1,4 @@
+import org.grails.gradle.plugin.tasks.GrailsTask
 version "0.1"
 
 configurations {
@@ -12,13 +13,25 @@ dependencies {
     compile "org.grails.plugins:scaffolding:2.1.2"
     compile 'org.grails.plugins:cache:1.1.7'
     compile "org.grails.plugins:asset-pipeline:1.9.6"
-//    compile "org.grails.plugins:spring-security-core:2.0-RC4"
+    compile "org.grails.plugins:spring-security-core:2.0-RC4"
     compile "javax.servlet:javax.servlet-api:3.1.0"
+    compile "net.sf.ehcache:ehcache-core:2.4.8"
+    compile "org.grails.plugins:spring-security-core:2.0-RC4"
 
     // plugins needed at runtime but not for compilation
     runtime "org.grails.plugins:hibernate4:4.3.5.5" // or ":hibernate:3.6.10.17"
     runtime "org.grails.plugins:database-migration:1.4.0"
     runtime "org.grails.plugins:jquery:1.11.1"
+
     compile project(':gtp-domain')
     compile project(':gtp-service')
+}
+
+task 'run' (type: GrailsTask, overwrite: true) {
+    command "run-app"
+    jvmOptions {
+        jvmArgs '-Xms32m -Xmx1524m -XX:PermSize=32m -XX:MaxPermSize=512m -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+UseParNewGC'.split(' ')
+        // you could also use the memory properties on JavaForkOptions directly;
+        // see http://www.gradle.org/docs/current/javadoc/org/gradle/process/JavaForkOptions.html
+    }
 }
